package com.lab3_final.lab3_final.model;

public enum EstadoAsignatura {
    NO_CURSADA,
    CURSADA,
    APROBADA
}
